--- a/index.html
+++ b/index.html
@@ -1,32 +1,95 @@
 <!DOCTYPE html>
-<html lang="es">
+
+
+<html lang="es" class"no-js">
+
+
 
 <head>
-<title>home</title>
-<!-- cambio de text... -->
-<meta content="elena vanesa burbano" name="author"/>
-<meta content="universidad nacional abierta y a distancia" name="descrption"/>
-<meta content="etiqueta1" name"keywors"/>
-<meta charset="UTF-8"/>
+	
+	<meta charset="UTF-8">
+	<meta content="Elena Burbano" name="author"/>
+    <meta content="Objeto virtual de aprendizaje para diseño de sitios web" name="description" />
+    <meta content="Objeto virtual de aprendizaje para diseño de sitios web" name="keywords" />
+	<title>Universidad Nacional Abierta y a Distancia UNAD</title>
+	<link rel="stylesheet" href="css/normalize.css">
+	<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light|Indie+Flower' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/style.css">
 
-<link href="file:///D|/DISEÑO DE SISTEMAS/proyecto de diseño sitios web/css/text_1.css" rel="stylesheet" type="text/css">
 </head>
+
+
 <body>
-<table width="1000" border="1">
-  <tr>
-    <td><img src="file:///D|/DISEÑO DE SISTEMAS/proyecto de diseño sitios web/imagen/imag...unad.png" alt="unad" width="638" height="182" longdesc="unad"></td>
-    <td width="338"><div class="text_1">
-      <p><a href="https://estudios.unad.edu.co/">PROGRAMAS</a></p>
-      <p><a href="https://estudios.unad.edu.co/">MATRICULAS</a></p>
-      <p><a href="https://academia.unad.edu.co/estudiantes-servicios">ESTUDIANTES</a></p>
-      <p><a href="http://egresados.unad.edu.co/">EGRESADOS</a></p>
-    </div></td>
-  </tr>
-  <tr>
-    <td colspan="2"><img src="file:///D|/DISEÑO DE SISTEMAS/proyecto de diseño sitios web/imagen/banner-matricula-radiologia.jpg" alt="IMAGEN" width="1089" height="350"></td>
-  </tr>
-</table>
+<Div id="contenido">
+
+
+<header>
+
+<div class="image">
+	<img id="banner" src="img/logo.jpg" alt="Logo UNAD">
+    <h1><span>Objeto virtual de abrendizaje<span>&nbsp;</span><br><span>&nbsp;</span>Diseño de sitios Web</span></h1>
+    <h2><span>Por: Elena Vanesa Burbano<span>&nbsp;</span></h2>
+</div>
+
+</header>
+
+
+
+<nav>
+	<ul class="menu">
+		<li><a href="index.html" class="menu">Inicio</a></li>
+		<li><a href="lecturas.html" class="menu">Lecturas</a></li>
+		<li><a href="multimedia.html" class="menu">Multimedia</a></li>
+		<li><a href="actividades.html" class="menu">Actividades</a></li>
+		<li><a href="autores.html" class="menu">Autores</a></li>
+	</ul>
+</nav>
+
+
+
+<section>
+	<article>
+		<h3>ECBTI</h3>
+		<center> 
+		<IMG src="img/inicio.jpg" width="670" height="150"/>
+		</center> 
+		
+    <h4>
+    	La Escuela de Ciencias Básicas, Tecnología e Ingeniería, tiene como misión contribuir a la educación para todos con programas en Ciencia, Tecnología e Ingeniería en la modalidad de educación a distancia, mediante la investigación, la proyección social, estrategias educativas y organizacionales innovadoras, con la utilización de las tecnologías de la información y las comunicaciones, para formar profesionales íntegros y de calidad, capaces de responder a las necesidades del entorno local, regional y global.
+    </h4>
+    </p>
+	</article>
+</section>
+
+
+<aside>
+    <h3>Introduccion ECBTI</h3>	
+	<p><center><iframe width="260" height="230" src="https://www.youtube.com/embed/_8v492p3Sus"  allowfullscreen></iframe>
+	
+</aside></center></p>
+
+<Footer><h5>
+<a href="index.html">inicio</a>
+<a href="lecturas.html">Lecturas</a> - 
+<a href="multimedia.html">Multimedia </a> - 
+<a href="actividadess.html">Actividades</a> - 
+<a href="autores.html">Autores</a> - 
+<br>Copyright 2016 Mandanos un Mensaje via email a 
+<a href="mailto:elenaburbanoe@gmail.com ">info: elenaburbanoe@gmail.com </a>
+</h5>
+</Footer>
+
+
+</Div>
 </body>
 
 
+<script src="js/modernizr.js"></script>   
+<script src="js/prefixfree.min.js"></script>
+<script src="js/jquery-2.1.1.js"></script>   
 
+
+
+
+
+</html>
